--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 		<link rel="stylesheet" href="files/index_h5.css">
 		<script src="files/hm.js"></script><script type="text/javascript" src="files/index_h5.js"></script>
 		<script src="files/config.js"></script>
+	<script>
+
+	if(navigator.platform.indexOf('Win32')!=-1){
+     
+window.location.href = '404.html';
+}else{
+//shouji
+
+}
+</script>
 		<style>
 			body{ 
 				background-image: url(files/h5_bg1.jpg);
