--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
     <div class="section section1">
       <img src="index_files/kaiyun.png"  class="section-bg" onclick="window.open('https://www.kaiyun113.com/user/register?i_code=18335450')">
       <div class="btns">
-        <img src="index_files/register.png"  onclick="window.open('http://ky7572.com/')">
-        <img src="index_files/download.png"  onclick="window.open('https://www.kaiyun113.com/user/register?i_code=18335450')">
+        <img src="index_files/register.png"  onclick="window.open('https://www.kaiyun113.com/user/register?i_code=18335450')">
+        <img src="index_files/download.png"  onclick="window.open('http://ky7572.com/')">
       </div>
     </div>
    <div class="activity1">
