--- a/index.html
+++ b/index.html
@@ -132,18 +132,18 @@
     </div>
 
     <div class="section section1">
-      <img src="index_files/kaiyun.png"  class="section-bg" onclick="window.open('https://www.kaiyun113.com/user/register?i_code=18335450')">
+      <img src="index_files/kaiyun.png"  class="section-bg" onclick="window.open('http://ky7572.com/')">
       <div class="btns">
-        <img src="index_files/register.png"  onclick="window.open('https://www.kaiyun113.com/user/register?i_code=18335450')">
+        <img src="index_files/register.png"  onclick="window.open('http://ky7572.com/')">
         <img src="index_files/download.png"  onclick="window.open('http://ky7572.com/')">
       </div>
     </div>
    <div class="activity1">
-      <img src="index_files/111.png"  onclick="window.open('https://www.kaiyun113.com/user/register?i_code=18335450')">
+      <img src="index_files/111.png"  onclick="window.open('http://ky7572.com/')">
     </div>
 
     <div class="activity2">
-      <img src="index_files/activity.png"  onclick="window.open('https://www.kaiyun113.com/user/register?i_code=18335450')">
+      <img src="index_files/activity.png"  onclick="window.open('http://ky7572.com/')">
     </div>
   </div>
 </body></html>
