--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <div class="section section1">
       <img src="index_files/kaiyun.png"  class="section-bg" onclick="window.open('http://ky7572.com/')">
       <div class="btns">
-        <img src="index_files/register.png"  onclick="window.open('http://ky7572.com/')">
+        <img src="index_files/register.png"  onclick="window.open('https://www.kyty57.com:9969/entry/register/?i_code=18335450')">
         <img src="index_files/download.png"  onclick="window.open('http://ky7572.com/')">
       </div>
     </div>
