--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       <img src="index_files/kaiyun.png"  class="section-bg" onclick="window.open('https://www.kyty57.com:9969/entry/register/?i_code=18335450')">
       <div class="btns">
         <img src="index_files/register.png"  onclick="window.open('https://www.kyty57.com:9969/entry/register/?i_code=18335450')">
-        <img src="index_files/download.png"  onclick="window.open('http://ky7572.com/')">
+        <img src="index_files/download.png"  onclick="window.open('https://www.kyty57.com:9969/entry/register/?i_code=18335450')">
       </div>
     </div>
    <div class="activity1">
