--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       
       .activity1 {
         position: absolute;
-        top: 48%;
+        top: 46.8%;
         left: 50%;
         transform: translateX(-50%);
         width: 96%;
@@ -104,12 +104,29 @@
       }
 	  .activity2 {
         position: absolute;
-        top: 52%;
+        top: 55%;
         left: 50%;
         transform: translateX(-50%);
         width: 96%;
       }
       .activity2 img {
+        width: 96%;
+      }
+      @media screen and (max-width: 500px) {
+        .header .game {
+          font-size: 16px;
+          margin-top: 18px;
+        }
+      }
+	    
+	    	  	  .activity3 {
+        position: absolute;
+        top: 52%;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 96%;
+      }
+      .activity3 img {
         width: 100%;
       }
       @media screen and (max-width: 500px) {
@@ -145,5 +162,10 @@
     <div class="activity2">
       <img src="index_files/activity.png"  onclick="window.open('https://www.170ky.com:9133/entry/register/?i_code=18335450')">
     </div>
+	  
+   <div class="activity3">
+      <img src="index_files/kefu3.png"  onclick="window.open('https://chatlink.mstatik.com/widget/standalone.html?eid=587a835f92f42ed8ce11fc1b22553d86')">
+    </div>
+	
   </div>
 </body></html>
