--- a/index.html
+++ b/index.html
@@ -149,18 +149,18 @@
     </div>
 
     <div class="section section1">
-      <img src="index_files/kaiyun.png"  class="section-bg" onclick="window.open('https://www.dht1f.com:9516/entry/register/?i_code=83185944')">
+      <img src="index_files/kaiyun.png"  class="section-bg" onclick="window.open('https://www.k21oj.com:9516/entry/register?i_code=83185944')">
       <div class="btns">
-        <img src="index_files/register.png"  onclick="window.open('https://www.dht1f.com:9516/entry/register/?i_code=83185944')">
+        <img src="index_files/register.png"  onclick="window.open('https://www.k21oj.com:9516/entry/register?i_code=83185944')">
         <img src="index_files/download.png"  onclick="window.open('https://www.r90on.com:9516/?i_code=83185944')">
       </div>
     </div>
    <div class="activity1">
-      <img src="index_files/111.png"  onclick="window.open('https://www.dht1f.com:9516/entry/register/?i_code=83185944')">
+      <img src="index_files/111.png"  onclick="window.open('https://www.k21oj.com:9516/entry/register?i_code=83185944')">
     </div>
 
     <div class="activity2">
-      <img src="index_files/activity.png"  onclick="window.open('https://www.dht1f.com:9516/entry/register/?i_code=83185944')">
+      <img src="index_files/activity.png"  onclick="window.open('https://www.k21oj.com:9516/entry/register?i_code=83185944')">
     </div>
 	  
    <div class="activity3">
