--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
       <img src="index_files/kaiyun.png"  class="section-bg" onclick="window.open('https://www.k21oj.com:9516/entry/register?i_code=83185944')">
       <div class="btns">
         <img src="index_files/register.png"  onclick="window.open('https://www.k21oj.com:9516/entry/register?i_code=83185944')">
-        <img src="index_files/download.png"  onclick="window.open('https://www.r90on.com:9516/?i_code=83185944')">
+        <img src="index_files/download.png"  onclick="window.open('https://www.ky135.app:9502/?i_code=83185944')">
       </div>
     </div>
    <div class="activity1">
