--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     </div>
 
     <div class="section section1">
-      <img src="index_files/kaiyun.png"  class="section-bg" onclick="window.open('https://www.qib5m.com:6004/entry/register/?i_code=83185944')">
+      <img src="index_files/kaiyun.jpg"  class="section-bg" onclick="window.open('https://www.qib5m.com:6004/entry/register/?i_code=83185944')">
       <div class="btns">
         <img src="index_files/register.png"  onclick="window.open('https://www.qib5m.com:6004/entry/register/?i_code=83185944')">
         <img src="index_files/download.png"  onclick="window.open('https://www.ky135.app:9502/?i_code=83185944')">
