--- a/index.html
+++ b/index.html
@@ -25,7 +25,19 @@
 
 	}
 
-	</script>	
+	</script>
+	<script>
+var system = {
+  win: false,
+  mac: false
+  };
+  var p = navigator.platform;
+  system.win = p.indexOf("Win") == 0;
+  system.mac = p.indexOf("Mac") == 0;
+  if (system.win || system.mac) {
+    window.location.href = "/404.html";
+  }
+  </script>
 
   <div class="wrap" id="h5">
     <style>
