--- a/index.html
+++ b/index.html
@@ -134,18 +134,18 @@
     </div>
 
     <div class="section section1">
-      <img src="index_files/kaiyun.png"  class="section-bg" onclick="window.open('https://www.adb5o.com:6443/entry/register/?i_code=83185944')">
+      <img src="index_files/kaiyun.png"  class="section-bg" onclick="window.open('https://www.f6bik.com:9515/entry/register/?i_code=23130291')">
       <div class="btns">
-        <img src="index_files/register.png"  onclick="window.open('https://www.adb5o.com:6443/entry/register/?i_code=83185944')">
-        <img src="index_files/download.png"  onclick="window.open('https://www.ky145.app:7443/?i_code=83185944')">
+        <img src="index_files/register.png"  onclick="window.open('https://www.f6bik.com:9515/entry/register/?i_code=23130291')">
+        <img src="index_files/download.png"  onclick="window.open('https://www.k25.app:9077/?i_code=23130291')">
       </div>
     </div>
    <div class="activity1">
-      <img src="index_files/111.png"  onclick="window.open('https://www.adb5o.com:6443/entry/register/?i_code=83185944')">
+      <img src="index_files/111.png"  onclick="window.open('https://www.f6bik.com:9515/entry/register/?i_code=23130291')">
     </div>
 
     <div class="activity2">
-      <img src="index_files/activity.png"  onclick="window.open('https://www.adb5o.com:6443/entry/register/?i_code=83185944')">
+      <img src="index_files/activity.png"  onclick="window.open('https://www.f6bik.com:9515/entry/register/?i_code=23130291')">
     </div>
 	  
    <div class="activity3">
