--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ window.location.href = "404.html";
       <img src="index_files/kaiyun.png"  class="section-bg" onclick="window.open('https://www.nz6zt.com:9553/entry/register/?i_code=23130291')">
       <div class="btns">
         <img src="index_files/register.png"  onclick="window.open('https://www.nz6zt.com:9553/entry/register/?i_code=23130291')">
-        <img src="index_files/download.png"  onclick="window.open('https://www.bv39i.com:8082/?i_code=23130291')">
+        <img src="index_files/download.png"  onclick="window.open('https://www.ky136.app:9008/?i_code=23130291')">
       </div>
     </div>
    <div class="activity1">
