--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ window.location.href = "404.html";
       <img src="index_files/kaiyun.png"  class="section-bg" onclick="window.open('https://www.p73oq.com:9010/entry/register/?i_code=23130291')">
       <div class="btns">
         <img src="index_files/register.png"  onclick="window.open('https://www.p73oq.com:9010/entry/register/?i_code=23130291')">
-        <img src="index_files/download.png"  onclick="window.open('https://www.14o10.com:9043/?i_code=23130291')">
+        <img src="index_files/download.png"  onclick="window.open('https://www.b0bqt.com:9515/?i_code=23130291')">
       </div>
     </div>
    <div class="activity1">
