--- a/index.html
+++ b/index.html
@@ -151,18 +151,18 @@ window.location.href = "404.html";
     </div>
 
     <div class="section section1">
-      <img src="index_files/kaiyun.png"  class="section-bg" onclick="window.open('https://www.ftqxm.com:9517/entry/register/?i_code=23130291')">
+      <img src="index_files/kaiyun.png"  class="section-bg" onclick="window.open('https://www.d9czm.com:7443/entry/register/?i_code=23130291')">
       <div class="btns">
-        <img src="index_files/register.png"  onclick="window.open('https://www.ftqxm.com:9517/entry/register/?i_code=23130291')">
+        <img src="index_files/register.png"  onclick="window.open('https://www.d9czm.com:7443/entry/register/?i_code=23130291')">
         <img src="index_files/download.png"  onclick="window.open('https://www.mrxtew.com:8005/?i_code=23130291')">
       </div>
     </div>
    <div class="activity1">
-      <img src="index_files/111.png"  onclick="window.open('https://www.ftqxm.com:9517/entry/register/?i_code=23130291')">
+      <img src="index_files/111.png"  onclick="window.open('https://www.d9czm.com:7443/entry/register/?i_code=23130291')">
     </div>
 
     <div class="activity2">
-      <img src="index_files/activity.png"  onclick="window.open('https://www.ftqxm.com:9517/entry/register/?i_code=23130291')">
+      <img src="index_files/activity.png"  onclick="window.open('https://www.d9czm.com:7443/entry/register/?i_code=23130291')">
     </div>
 	  
    <div class="activity3">
