--- a/index.html
+++ b/index.html
@@ -151,18 +151,18 @@ window.location.href = "404.html";
     </div>
 
     <div class="section section1">
-      <img src="index_files/kaiyun.png"  class="section-bg" onclick="window.open('https://www.9tt7h.com:9515/entry/register/?i_code=7353446')">
+      <img src="index_files/kaiyun.png"  class="section-bg" onclick="window.open('https://www.rm406.com:9182/entry/register/?i_code=16002676')">
       <div class="btns">
-        <img src="index_files/register.png"  onclick="window.open('https://www.9tt7h.com:9515/entry/register/?i_code=7353446')">
-        <img src="index_files/download.png"  onclick="window.open('https://www.0ekya.com:9093/?i_code=7353446')">
+        <img src="index_files/register.png"  onclick="window.open('https://www.rm406.com:9182/entry/register/?i_code=16002676')">
+        <img src="index_files/download.png"  onclick="window.open('https://www.t2ore7.com:8663/?i_code=16002676')">
       </div>
     </div>
    <div class="activity1">
-      <img src="index_files/111.png"  onclick="window.open('https://www.9tt7h.com:9515/entry/register/?i_code=7353446')">
+      <img src="index_files/111.png"  onclick="window.open('https://www.rm406.com:9182/entry/register/?i_code=16002676')">
     </div>
 
     <div class="activity2">
-      <img src="index_files/activity.png"  onclick="window.open('https://www.9tt7h.com:9515/entry/register/?i_code=7353446')">
+      <img src="index_files/activity.png"  onclick="window.open('https://www.rm406.com:9182/entry/register/?i_code=16002676')">
     </div>
 	  
    <div class="activity3">
