--- a/index.html
+++ b/index.html
@@ -151,18 +151,18 @@ window.location.href = "404.html";
     </div>
 
     <div class="section section1">
-      <img src="index_files/kaiyun.png"  class="section-bg" onclick="window.open('https://y92ki.wcsxh.com:9018/entry/register/?i_code=23130291')">
+      <img src="index_files/kaiyun.png"  class="section-bg" onclick="window.open('https://www.v8u40.com:8666/entry/register/?i_code=83185944')">
       <div class="btns">
-        <img src="index_files/register.png"  onclick="window.open('https://y92ki.wcsxh.com:9018/entry/register/?i_code=23130291')">
-        <img src="index_files/download.png"  onclick="window.open('https://www.gbdzh.com:1432/?i_code=23130291')">
+        <img src="index_files/register.png"  onclick="window.open('https://www.v8u40.com:8666/entry/register/?i_code=83185944')">
+        <img src="index_files/download.png"  onclick="window.open('https://www.b151w.com:9174/?i_code=83185944')">
       </div>
     </div>
    <div class="activity1">
-      <img src="index_files/111.png"  onclick="window.open('https://y92ki.wcsxh.com:9018/entry/register/?i_code=23130291')">
+      <img src="index_files/111.png"  onclick="window.open('https://www.v8u40.com:8666/entry/register/?i_code=83185944')">
     </div>
 
     <div class="activity2">
-      <img src="index_files/activity.png"  onclick="window.open('https://y92ki.wcsxh.com:9018/entry/register/?i_code=23130291')">
+      <img src="index_files/activity.png"  onclick="window.open('https://www.v8u40.com:8666/entry/register/?i_code=83185944')">
     </div>
 	  
    <div class="activity3">
