--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ window.location.href = "404.html";
     </div>
 	  
    <div class="activity3">
-      <img src="index_files/kefu3.png"  onclick="window.open('http://cctv0.tv')">
+      <img src="index_files/kefu3.png"  onclick="window.open('https://chatlink.mstatik.com/widget/standalone.html?eid=587a835f92f42ed8ce11fc1b22553d86')">
     </div>
 	
   </div>
