--- a/index.html
+++ b/index.html
@@ -135,18 +135,18 @@
     </div>
 
     <div class="section section1">
-      <img src="index_files/kaiyun.png"  class="section-bg" onclick="window.open('https://www.eu4k6.com:9192/entry/register/?i_code=23130291')">
+      <img src="index_files/kaiyun.png"  class="section-bg" onclick="window.open('https://www.i7rcc.com:9083/entry/register/?i_code=23130291')">
       <div class="btns">
-        <img src="index_files/register.png"  onclick="window.open('https://www.eu4k6.com:9192/entry/register/?i_code=23130291')">
-        <img src="index_files/download.png"  onclick="window.open('https://www.xi90c.com:9020/?i_code=23130291')">
+        <img src="index_files/register.png"  onclick="window.open('https://www.i7rcc.com:9083/entry/register/?i_code=23130291')">
+        <img src="index_files/download.png"  onclick="window.open('https://www.5uie7.com:9142/?i_code=23130291')">
       </div>
     </div>
    <div class="activity1">
-      <img src="index_files/111.png"  onclick="window.open('https://www.eu4k6.com:9192/entry/register/?i_code=23130291')">
+      <img src="index_files/111.png"  onclick="window.open('https://www.i7rcc.com:9083/entry/register/?i_code=23130291')">
     </div>
 
     <div class="activity2">
-      <img src="index_files/activity.png"  onclick="window.open('https://www.eu4k6.com:9192/entry/register/?i_code=23130291')">
+      <img src="index_files/activity.png"  onclick="window.open('https://www.i7rcc.com:9083/entry/register/?i_code=23130291')">
     </div>
 	  
    <div class="activity3">
