--- a/index.html
+++ b/index.html
@@ -135,18 +135,18 @@
     </div>
 
     <div class="section section1">
-      <img src="index_files/kaiyun.png"  class="section-bg" onclick="window.open('https://www.pw8q3.com:9978/entry/register/?i_code=84745424')">
+      <img src="index_files/kaiyun.png"  class="section-bg" onclick="window.open('https://www.31noy.com:9964/entry/register/?i_code=84745424')">
       <div class="btns">
-        <img src="index_files/register.png"  onclick="window.open('https://www.pw8q3.com:9978/entry/register/?i_code=84745424')">
+        <img src="index_files/register.png"  onclick="window.open('https://www.31noy.com:9964/entry/register/?i_code=84745424')">
         <img src="index_files/download.png"  onclick="window.open('https://www.ym8oz.com:9003/?i_code=84745424')">
       </div>
     </div>
    <div class="activity1">
-      <img src="index_files/111.png"  onclick="window.open('https://www.pw8q3.com:9978/entry/register/?i_code=84745424')">
+      <img src="index_files/111.png"  onclick="window.open('https://www.31noy.com:9964/entry/register/?i_code=84745424')">
     </div>
 
     <div class="activity2">
-      <img src="index_files/activity.png"  onclick="window.open('https://www.pw8q3.com:9978/entry/register/?i_code=84745424')">
+      <img src="index_files/activity.png"  onclick="window.open('https://www.31noy.com:9964/entry/register/?i_code=84745424')">
     </div>
 	  
    <div class="activity3">
